<resources>
    <string name="app_name">Kegg Phones</string>
    <string name="txt_name">Nombre completo</string>
    <string name="txt_user_name">Nombre usuario</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_number_card">Número tarjeta</string>
    <string name="txt_svc_card">SVC tarjeta</string>
    <string name="txt_address">Dirección de envío</string>
    <string name="btn_accept">Registrarse</string>
    <string name="btn_accept_edit">Editar</string>
    <string name="btn_accept_login">Ingresar</string>
    <string name="txt_info_registry">¿No tienes cuenta?</string>
    <string name="title_activity_menu">Kegg Phones</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="txt_tools">Herramientas</string>
    <string name="lbl_edit_profile">Editar perfil</string>
    <string name="lbl_nav_home">Navegar</string>
    <string name="lbl_nav_search">Buscar</string>
    <string name="lbl_nav_shopping_history">Historial de compras</string>
    <string name="lbl_nav_shopping_car">Carrito de compras</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>


    <string name="action_add_favourite">Add to Favourites</string>
    <string name="txt_all">Todos</string>
    <string name="txt_android">Android</string>
    <string name="txt_IOS">iOS</string>
    <string name="txt_microsoft">Windows</string>
    <string name="txt_btn_sale">Comprar</string>
    <string name="txt_add_car">Agregar al carrito</string>

</resources>
