<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.keggphones.LoginActivity">



    <LinearLayout
        android:id="@+id/area_useName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/top_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_client2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/gender_neutral_user_52" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_user_name"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_password"
        android:layout_below="@+id/area_useName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/password_48" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/area_password"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_accept_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/import_52"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_accept_login"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_sigin"
        android:layout_below="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/top_regis"
        >


    </LinearLayout>

    <TextView
        android:id="@+id/txtinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_info_registry"
        android:textAlignment="center"
        android:textSize="17dp"
        android:layout_below="@+id/area_sigin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtinfo"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/btn_accept"
        android:id="@+id/btnRegistry"
        android:textSize="17dp"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Borderless"/>


</RelativeLayout>
